--- a/final/public/auth.html
+++ b/final/public/auth.html
@@ -110,6 +110,7 @@
         <input type="email" id="login-email" placeholder="Email" required />
         <input type="password" id="login-password" placeholder="Password" required />
         <button type="submit">Login</button>
+
         <p>Don't have an account? <span class="toggle" id="to-signup">Sign up</span></p>
       </form>
 
@@ -118,6 +119,30 @@
         <input type="text" id="signup-name" placeholder="Full Name" required />
         <input type="email" id="signup-email" placeholder="Email" required />
         <input type="password" id="signup-password" placeholder="Password" required />
+        
+        <input type="text" value="Ethiopia" disabled />
+        <input type="text" value="Addis Ababa" disabled />
+
+        <select id="subcity" required>
+          <option value="">Select Sub-City</option>
+          <option value="Bole">Bole</option>
+          <option value="Yeka">Yeka</option>
+          <option value="Kirkos">Kirkos</option>
+          <option value="Arada">Arada</option>
+          <option value="Lideta">Lideta</option>
+          <option value="Nifas Silk">Nifas Silk</option>
+          <option value="Kolfe Keranio">Kolfe Keranio</option>
+          <option value="Addis Ketema">Addis Ketema</option>
+          <option value="Gullele">Gullele</option>
+          <option value="Akaki Kality">Akaki Kality</option>
+        </select>
+
+        <input
+          type="text"
+          id="district"
+          placeholder="District / Woreda (e.g. Woreda 03)"
+          required
+        />
         <button type="submit">Sign Up</button>
         <p>Already have an account? <span class="toggle" id="to-login">Login</span></p>
       </form>
